force-app/main/default/objects/Driver__c/fields/Companies__c.field-meta.xml
<CustomField>
    <fullName>Companies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Companies</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>