force-app/main/default/objects/Driver__c/fields/Trucks__c.field-meta.xml
<CustomField>
    <fullName>Trucks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trucks</label>
    <referenceTo>Truck__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>